--- a/index.html
+++ b/index.html
@@ -104,6 +104,25 @@
         <div class="container">
           <div id="content">
 
+            <article id="gist" class="box post">
+              <h2>In a hurry?</h2>
+              <p>Here's the quick version.  Milwaukie Bay Park is beautiful, but it's unfinished.  By now we should have had a playground, bathrooms, splash pad, more trees, picnic areas, and a stage.  But all we've got is grass, and very little shade.  The Clackamas County Commissioners have been holding up construction for years, due to playing political games with the park.  There's already money in the NCPRD budget for these items, and over $2.4 million in grant money is at risk of lapsing due to inaction.  
+                
+                <p>The park is a regional benefit to everyone in Clackamas County, unincorporated and city alike.  When politicians play politics with our parks, everyone loses.  Enough is enough.  Our ask is simple: Our elected officials need to come to the table and work out a compromise to build the park.  The City of Milwaukie is willing.  The Clackamas County Commissioners refuse to come to the table.  Read on to educate yourself on how to see through the charade and tell your elected officials to <b>W</b>ork <b>T</b>ogether for the <b>F</b>uture!</p>
+            </article>
+
+
+            <article id="get-involved" class="box post">
+              <h2>Get Involved!</h2>
+              <p>Here are some ways to help:</p>
+              <ol>
+                <li>Join the <a href="https://www.facebook.com/share/g/BBcuDVA5AXn6AGiU/?mibextid=K35XfP">"Friends of Milwaukie Bay Park" Facebook group</a> to stay up to date on community action</li>
+                <li>Attend the rally Friday September 27th at Milwaukie Bay Park, 5:30pm.  Bring a sign!  <a href="https://www.facebook.com/share/NeRXcQQk1whmQPof/?mibextid=9l3rBW">RSVP here!</a></li>
+                <li>Email the County Commissioners at bcc@clackamas.us and tell them you want them to put politics aside and build the park for the public's benefit!</li>
+                <li>Read on to educate yourself on the history of the park, and how to help get it back on track.</li>
+              </ol>
+            </article>
+
             <article id="faq" class="box post">
               
               <h2>Frequently Asked Questions (FAQ) About Milwaukie Bay Park</h2>
