--- a/index.html
+++ b/index.html
@@ -70,11 +70,6 @@
                 </a>
               </li>	
               <li>
-				<a class="icon solid fa-question" href="#news"
-					><span>Latest News</span>
-				</a>
-			</li>	
-              <li>
                 <a class="icon solid fa-check" href="#faq"
                   ><span>Get the Facts</span></a
                 >
@@ -118,7 +113,7 @@
               <ol>
                 <li>Join the <a href="https://www.facebook.com/share/g/BBcuDVA5AXn6AGiU/?mibextid=K35XfP">"Friends of Milwaukie Bay Park" Facebook group</a> to stay up to date on community action</li>
                 <li>Attend the rally Friday September 27th at Milwaukie Bay Park, 5:30pm.  Bring a sign!  <a href="https://www.facebook.com/share/NeRXcQQk1whmQPof/?mibextid=9l3rBW">RSVP here!</a></li>
-                <li>Email the County Commissioners at bcc@clackamas.us and tell them you want them to put politics aside and build the park for the public's benefit!</li>
+                <li>Email the County Commissioners at bcc@clackamas.us and tell them you want them to put politics aside and build the park for the public's benefit!  <br><b>Not sure what to say?  Start with <a href="#action">this sample email here</a>.</li></b>
                 <li>Read on to educate yourself on the history of the park, and how to help get it back on track.</li>
               </ol>
             </article>
@@ -173,59 +168,6 @@
               </ul>              
 
             </article>
-
-
-            <article id="news" class="box post">
-				<header>
-				  <h2>Latest News</h2>
-				</header>
-              <!-- Voices -->
-              <h3>
-                9/11/24: Your voices are making a difference!
-              </h3>
-
-				<p>
-					In the agenda for tonight's District Advisory Committee there is a promising update about grant funding:
-
-					<blockquote>NCPRD staff has recently met with federal, state, and local grant partners to maintain the current grant funding. NCPRD is seeking a formal extension for our federal grant until fall 2026. This is the only grant with a firm deadline. The other grant partners have said they will follow. NCPRD budget resources for phase three improvements are still secure and still in the budget.</blockquote>
-					
-					The report also states:<br><br>
-
-				<blockquote>
-					The Board of Directors have received several emails in support of completing phase three improvement at the park. These go into the Director log for community input.</blockquote>
-
-					But just because the funding is secure until 2026 does not mean our work is done. The park is still "on hold" while the Clackamas County Commissioners refuse to negotiate in good faith with the City of Milwaukie. Meanwhile construction costs continue to skyrocket due to inflation.<p><br>
-
-					Here is the standard response email from the County Commissioners:
-
-					<blockquote>
-						Phase three of Milwaukie Bay Park is on
-						pause because there’s been no progress on updating the intergovernmental
-						agreement between NCPRD and the City of Milwaukie. It is our understanding
-						the City is seeking to clarify an appropriate legal route for their potential future
-						withdrawal from the District. Before continuing construction, the district needs
-						assurance that should Milwaukie choose to depart, District investments are not
-						removed from district ownership at the expense of the rest of the District’s
-						taxpayers.
-					</blockquote>
-
-					This doesn't make sense.  If Milwaukie did leave the district, many things could indeed change.  But ownership and accessibility of the park would not.  The park is owned by the City, and would remain owned by the City whether or not the City leaves the district.  The park is open to the public, and would remain open to the public regardless of whether or not the City leaves the district. 
-<p><br>
-					<b>The City of Milwaukie is trying to negotiate in good faith with the County Commissioners, but they are refusing to come to the table.</b>
-					<p>
-					From the <a href="https://www.milwaukieoregon.gov/sites/default/files/2024-0903-ws_packet.pdf">Sep 3, 2024 City Council meeting</a>:
-
-					<blockquote>Mayor Batey asked if the District Board would be open to
-						conversations with two Commissioners and two City Councilors to try to make progress on
-						Milwaukie Bay Park, but Director Savas clarified that they would not resume negotiations until
-						the appeal on the validation action is resolved or dropped.</blockquote>
-
-					Keep those emails to the County Commissioners coming! Tell them it's time to sit down with the City and work out a plan!
-					bcc@clackamas.us
-				</p>
-			  </article>	
-
-
 
             <article id="facts" class="box post">
               <header>
@@ -410,21 +352,34 @@
                 The county commissioners are elected to be accountable to the
                 people. Their email address is: BCC@clackamas.us.
               </p>
-              Here are some ideas to get you started:
-              <ol>
-                <li>
-                  We want full transparency on the NCPRD's MBP website. No more
-                  indefinite project holds.
-                </li>
-                <li>
-                  Where's the Funding? We want commitments that you are doing
-                  everything you can to save the $2.4 million in grant money.
-                </li>
-                <li>
-                  We want to see a plan for resuming the construction phase and
-                  building MBP.
-                </li>
-              </ol>
+              <p>Not sure what to say?  Start with this template, and customize to fit the message you want!
+              </p>
+              <blockquote>
+                Dear Clackamas County Commissioners,
+<br><br>
+I am writing as a concerned citizen to express my strong support for the immediate resumption of construction on Phase 3 of Milwaukie Bay Park. This park is a cherished asset in our community, and its completion is eagerly anticipated by residents who value the recreational and environmental benefits it provides.
+<br><br>
+I understand that there are ongoing discussions regarding the Intergovernmental Agreement (IGA) between the North Clackamas Parks and Recreation District (NCPRD) and the City of Milwaukie. However, I believe that making the completion of Milwaukie Bay Park contingent upon the resolution of separate legal matters is not in the best interest of the community.
+<br><br>
+The issues surrounding the IGA and the City's potential future withdrawal from NCPRD are legal matters that should be addressed independently. Delaying the park's completion over these issues risks losing grant funding and negates the substantial investments already made by NCPRD, Clackamas County, and Water Environment Services.
+<br><br>
+NCPRD has invested over $1.1 million since 2017 in Milwaukie Bay Park. Pausing construction jeopardizes this investment and undermines the trust of taxpayers who expect to see tangible results from their contributions. Delays in construction could result in the lapse of crucial grant money allocated for this project. Acting promptly ensures that the community benefits from these funds and that the park reaches its full potential without additional financial burdens.
+<br><br>
+Completing Phase 3 will provide significant recreational opportunities and improve the quality of life for residents. It aligns with NCPRD's mission to serve the community's needs effectively, even while managing resources carefully.
+<br><br>
+Even if the City of Milwaukie were to withdraw from NCPRD, the park would continue to serve as a valuable regional amenity accessible to all. The benefits of Milwaukie Bay Park extend beyond city boundaries, enhancing recreational opportunities for the entire district and surrounding areas. Therefore, concerns about it becoming a "stranded asset" are unfounded, as the park will remain a community treasure that supports regional well-being.
+<br><br>
+I respectfully urge the Board to decouple the Milwaukie Bay Park project from the ongoing IGA negotiations and proceed with construction as planned. Doing so will demonstrate a commitment to the community and ensure that previous investments yield the intended benefits.
+<br><br>
+Thank you for your attention to this matter. I am hopeful for a positive resolution that prioritizes the well-being and interests of our community.
+<br><br>
+Sincerely,
+<br><br>
+[Your Name]<br>
+[Your Address]<br>
+[Your Email Address]<br>
+[Your Phone Number]
+              </blockquote>
 
               Please send a carbon copy (cc) to the Milwaukie City Council at
               citycouncil@milwaukieoregon.gov and the NCPRD District Advisory
