--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
               <p>The BCC has decided to halt progress on the park until a legal matter between the City of Milwaukie and NCPRD is resolved. The City is seeking legal clarification on the process for potentially withdrawing from NCPRD, but no decision to withdraw has been made. The BCC claims that investing in the park now could be "unjust" to other taxpayers if the City eventually leaves the district. Commissioner Paul Savas used the term “stranded asset” to refer to what could happen to the park in such a case.</p>
 
               <h3 id="is-the-city-leaving-the-district"><a href="#is-the-city-leaving-the-district">Is Milwaukie Leaving NCPRD?</a></h3>
-              <p>The question of whether Milwaukie can or will ever leave NCPRD is an important one, but it's complicated and it's not likely to be decided soon.  The question of whether or not it can leave is tied up in a legal appeal that may take another 6-12 months by NCPRD estimates.  The question of whether it would leave even if it could has not been voted on.  As for the reasons why the City is exploring that option at all, there is a post about that on the city's website: https://www.milwaukieoregon.gov/parksmanagement </p>
+              <p>The question of whether Milwaukie can or will ever leave NCPRD is an important one, but it's complicated and it's not likely to be decided soon.  The question of whether or not it can leave is tied up in a legal appeal that may take another 6-12 months by NCPRD estimates.  The question of whether it would leave even if it could has not been voted on.</p>
               
               
               <h3 id="what-does-city-want-to-do-now"><a href="#what-does-city-want-to-do-now">What does the City of Milwaukie want to do now?</a></h3>
